// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title should display children 1`] = `
<ForwardRef
  className="Title TitleColor_default"
  ellipsis={true}
  tag="h1"
>
  content
</ForwardRef>
`;

exports[`Title should extend className 1`] = `
<ForwardRef
  className="Title TitleColor_default noPaddingBottom"
  ellipsis={true}
  tag="h1"
>
  content
</ForwardRef>
`;

exports[`Title should handle theme 1`] = `
<Title>
  content
</Title>
`;
